style.css
body, .smoke {
  text-align: center;
  font-family: 'Droid Serif', serif;
  vertical-align: center;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -o-user-select: none;
  user-select: none;
}
img {
  vertical-align: middle;
}
p, .blurb {
  text-align: left;
  font-size: 16px;
}
b {
  font-size: 20px;
}
html {
  background: #ccc;
}
body, .container {
  background: transparent;
}
.container {
  display: none;
}
.title {
  font-family: 'Delius', cursive;
}
h1 {
  font-size: 77px;
  line-height: 123px;
  color: white;
  text-shadow: 0 1px 0 #ccc, 
               0 2px 0 #c9c9c9,
               0 3px 0 #bbb,
               0 4px 0 #b9b9b9,
               0 5px 0 #aaa,
               0 6px 1px rgba(0,0,0,.1),
               0 0 5px rgba(0,0,0,.1),
               0 1px 3px rgba(0,0,0,.3),
               0 3px 5px rgba(0,0,0,.2),
               0 5px 10px rgba(0,0,0,.25),
               0 10px 10px rgba(0,0,0,.2),
               0 20px 20px rgba(0,0,0,.15);
}
#canvas {
  cursor: crosshair;
  border: 10px solid silver;
  -moz-box-shadow: 0 0 5px #888;
  -webkit-box-shadow: 0 0 5px #888;
  box-shadow: 0 0 5px #888;
  background: white;
}
*:active {
  cursor: crosshair;
}

